added lunr search

--- a/docs-site/antora-playbook.yml
+++ b/docs-site/antora-playbook.yml
@@ -9,3 +9,6 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+antora:
+  extensions:
+    - require: '@antora/lunr-extension'
