--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v2
         with:
-          path: build/site
+          path: docs-site/build/site
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
