--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: component-a
-title: Component A
-version: 1.5.6
+title: ZF Open Source
+version: 1.0.0
 start_page: index.adoc
 asciidoc:
   attributes:
