--- a/docs-site/antora-playbook.yml
+++ b/docs-site/antora-playbook.yml
@@ -7,7 +7,7 @@ content:
     branches: HEAD
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
+    url: https://github.com/ZUGFeRD/materials/raw/main/docs-site/ui-bundle.zip
     snapshot: true
   supplemental_files:
     - path: ui.yml
