--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,10 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: docs-site/build/site
+      - name: Zip Docs
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r docs.zip docs-site/build/site
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
