--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload Zip
         uses: actions/upload-pages-artifact@v2
         with:
-          path: docs.zip
+          file: docs.zip
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
