--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,9 +40,9 @@ jobs:
         with:
           args: zip -qq -r docs.zip docs-site/build/site
       - name: Upload Zip
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: docs.zip
+          path: docs.zip
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
