--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: docs.zip
+      - run: |
+          echo ${{ artifact-url }} > world.txt
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
