--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,16 +36,17 @@ jobs:
         with:
           path: docs-site/build/site
           env-url: FOOBAR
-      - name: Use URL for something
-        run: echo "${{ env.FOOBAR }}"
       - name: Zip Docs
         uses: montudor/action-zip@v1
         with:
           args: zip -qq -r docs.zip docs-site/build/site
       - name: Upload Zip
+        id: artifact-upload-step
         uses: actions/upload-artifact@v4
         with:
           path: docs.zip
+      - name: Use URL for something
+        run: echo "${{ steps.artifact-upload-step.outputs.artifact-url }}"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
