--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,11 +31,6 @@ jobs:
         run: npm i antora @antora/lunr-extension
       - name: Generate Site
         run: npx antora docs-site/antora-playbook.yml
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: docs-site/build/site
-          env-url: FOOBAR
       - name: Zip Docs
         uses: montudor/action-zip@v1
         with:
@@ -46,7 +41,11 @@ jobs:
         with:
           path: docs.zip
       - name: Use URL for something
-        run: echo "${{ steps.artifact-upload-step.outputs.artifact-url }}"
+        run: echo "${{ steps.artifact-upload-step.outputs.artifact-url }}" > docs-site/build/site/foobar.txt
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: docs-site/build/site
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
